Nearly ready for multiplayer. Some weird bugs in keeping track of the number of players. Next step: Don't start the game until someone clicks "start."

--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,13 @@
   padding: 3px;
 }
 
+.cardContainer {
+  border: 0px;
+  margin: 0px;
+  padding: 0px;
+  display: inline;
+}
+
 .myHand, .otherHand {
   display: block;
   margin: 3px;
