Table headers for piles and hands

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -192,3 +192,8 @@ table td.cards {
   width: 55%;
   text-align: right;
 }
+table td.header {
+  font-size: 1.2em;
+  text-align: center;
+  height: auto;
+}
