Deck pile displayed right beside the team piles

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -251,6 +251,13 @@ table td.cards {
   width: 55%;
   text-align: right;
 }
+.deckPile {
+  position: absolute;
+  left: 65px;
+}
+.deckPile button {
+  margin-left: -30px;
+}
 div#team-pile {
   width: 100%;
   text-align: center;
