--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -77,7 +77,6 @@
 }
 
 .discards {
-  height: 70px;
   text-align: center;
   width: 100%;
   margin-left: 20px;
@@ -257,6 +256,15 @@ table td.cards {
 }
 .deckPile button {
   margin-left: -30px;
+}
+.stats {
+  position: absolute;
+  display: inline;
+  right: 40px;
+  text-align: right;
+}
+.stats .fa {
+  margin-left: 5px;
 }
 div#team-pile {
   width: 100%;
