Added more annoying but necessary little changes. Look at the diff!

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,4 +1,4 @@
-@import url(http://fonts.googleapis.com/css?family=Roboto:400,700,700italic,400italic);
+@import url(//fonts.googleapis.com/css?family=Roboto:400,700,700italic,400italic);
 
 .visCard, .invisCard {
   border: 1px solid;
